--- a/main.html
+++ b/main.html
@@ -31,7 +31,11 @@
     <footer>
       This AI project was coded by
       <a href="https://github.com/Niki-Nicoli" target="_blank">Nikilia Clark</a
-      >, and open soured on GitHub and hosted on Netlify and is
+      >, and
+      <a href="https://github.com/Niki-Nicoli/Short-Story-Ideas" target=""
+        >open soured on GitHub</a
+      >
+      and hosted on Netlify and is
     </footer>
   </body>
 </html>
