--- a/main.html
+++ b/main.html
@@ -32,8 +32,8 @@
       This AI project was coded by
       <a href="https://github.com/Niki-Nicoli" target="_blank">Nikilia Clark</a
       >, and
-      <a href="https://github.com/Niki-Nicoli/Short-Story-Ideas" target=""
-        >open soured on GitHub</a
+      <a href="https://github.com/Niki-Nicoli/Short-Story-Ideas" target="_blank"
+        >open-sourced on GitHub</a
       >
       and hosted on Netlify and is
     </footer>
