--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
       <a href="https://github.com/Niki-Nicoli/Short-Story-Ideas" target="_blank"
         >open-sourced on GitHub</a
       >
-      and hosted on Netlify and is
+      and hosted on Netlify.
     </footer>
   </body>
 </html>
