--- a/index.html
+++ b/index.html
@@ -8,39 +8,54 @@
   </head>
   <body>
     <h1>Welcome to AI Short Story Idea Gernerator</h1>
-    <h2>Let's Start having some Ideas!</h2>
-    <main>
-      <select value="genre">
-        <option value=" ">Select a Genre</option>
-        <option>Young Adult Fiction</option>
-        <option>Dystopian</option>
-        <option>Fantasy</option>
-        <option>Sci-Fiction</option>
-      </select>
-      <form>
-        <div>
-          <label>What POV do you write in?</label>
-          <input type="radio" name="POV" id="no-preference" />
-          <label for="no-preference" selected>No Preference</label>
-          <input type="radio" name="POV" id="1st-person" required />
-          <label for="1st-person">1st Person</label>
-          <input type="radio" name="POV" id="2nd-person" />
-          <label for="2nd-person" selected>2nd Person</label>
-          <input type="radio" name="POV" id="1st-person" required />
-          <label for="3rd-person">3rd Person</label>
-        </div>
-        <div><input type="submit" required /></div>
-      </form>
-      <div>Story Ideas:</div>
-      <div></div>
-    </main>
+    <div class="container">
+      <h2>Let's Start having some Ideas!</h2>
+      <header>
+        <select class="genre-selection" value="genre">
+          <option value=" ">Select a Genre</option>
+          <option>Young Adult Fiction</option>
+          <option>Dystopian</option>
+          <option>Fantasy</option>
+          <option>Sci-Fiction</option>
+        </select>
+        <form>
+          <div class="writing-pov">
+            <label>What POV do you write in?</label>
+          </div>
+          <div class="point-of-view">
+            <div>
+              <input type="radio" name="POV" id="no-preference" />
+              <label for="no-preference">No Preference</label>
+            </div>
+            <div>
+              <input type="radio" name="POV" id="1st-person" required />
+              <label for="1st-person">1st Person</label>
+            </div>
+            <div>
+              <input type="radio" name="POV" id="2nd-person" />
+              <label for="2nd-person" selected>2nd Person</label>
+            </div>
+            <div>
+              <input type="radio" name="POV" id="3rd-person" required />
+              <label for="3rd-person">3rd Person</label>
+            </div>
+          </div>
+        </form>
+        <form>
+          <div class="submit"><input type="submit" required /></div>
+        </form>
+      </header>
+      <br />
+      <main>
+        <p>Story Ideas:</p>
+        <div></div>
+      </main>
+    </div>
     <footer>
       This AI project was coded by
       <a href="https://github.com/Niki-Nicoli" target="_blank">Nikilia Clark</a
       >, and is
-      <a
-        href="https://github.com/Niki-Nicoli/Short-Story-Idea-Generator"
-        target="_blank"
+      <a href="https://github.com/Niki-Nicoli/Short-Story-Ideas" target="_blank"
         >open soured on GitHub</a
       >
       and is
