--- a/index.html
+++ b/index.html
@@ -99,6 +99,6 @@
         >hosted on Netlify</a
       >
     </footer>
-    <script src="index.js"></script>
+    <script src="styles.js"></script>
   </body>
 </html>
