User Experience Improvement

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    
                <form id="POV">
           <div class="writing-pov">
-            <label>What POV do you write in?</label>
+            <label>What <strong>Point of View</strong>   do you write in?</label>
                     </div>
 
           <div class="point-of-view" >
@@ -69,7 +69,7 @@
           
           <form id="idea-generator">
           <div class="writing-pov"><label >General Story Details:</label></div>
-          <input type="text"  class="genre-selection" id="general-story-details">
+          <input type="text" placeholder="ex: if genre fantasy (girl learns she can use magick)" class="genre-selection" id="general-story-details">
 <br>
       
           <div class="submit"><input id="generate-button" value="Generate" type="submit"></div>
